@@ -79,3 +79,10 @@ table {
     margin-left: auto;
     margin-right: auto;
 }
+
+hr {
+    color: #000000;
+    background-color: #000000;
+    border: 0;
+    height: 1;
+}
