@@ -1,3 +1,9 @@
+2004-06-18  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* newweb.css (hr): use thin black horizontal line.
+
+	* site/index.html (Quick links): use thin lines for table.
+
 2004-06-16  Pedro Kroger  <kroeger@pedrokroeger.net>
 
 	* site/download/index.html: debian and fink packages for 2.3.4
